@@ -44,7 +44,7 @@ let (|!) x f = f x
 let enforced_filters = ["yminsky.dedup"]
 
 let version_tuple = (__VERSION__)
-let version_suffix = "" (* + for development branch *)
+let version_suffix = "+" (* + for development branch *)
 let compatible_version_tuple = (0,1,5)
 let version =
   let (maj_version,min_version,release) = version_tuple in
